# T2Lead

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  requirements.txt  weekly_progress_20260323_20260327.md
.cursor/rules/: t2lead-execution-safety.mdc
.cursor/skills/: README_zh.md
.github/workflows/: ci.yml
configs/: default_config.yaml  variant_breast.yaml
docs/: INDEX_zh.md
docs/experiments/: README.md  README_zh.md
docs/guide/: configuration.md  configuration_zh.md  disease_pipeline.md  disease_pipeline_zh.md  gpu_execution_zh.md  module_improvement_roadmap_zh.md  output_reference.md  output_reference_zh.md  quickstart.md  quickstart_zh.md  skills_and_rules_usage_zh.md  team_execution_rules_zh.md  variant_pipeline.md  variant_pipeline_zh.md  variant_runs_structure_zh.md
docs/postmortems/: 2026-04-02_pipeline_review.md  2026-04-03_lung_breast_md_reliability_triage.md  (+4 more)
scripts/: bootstrap_env.py  complete_regen.sh  download_crem_db.sh  export_stage4_2d.py  fix_leads_rescore.py  fix_reinvent_prior_metadata.py  organize_stage4_assets.py  regen_dashboard.py  regen_dashboard_html_only.py  reinvent_smoke.toml  run.sh  run_mainpath.py  run_md_mini_validation.py  run_pipeline.py  run_stage.py  validate_mmgbsa_gefitinib.py
tests/: test_admet_hard_filter.py  test_explicit_md.py  test_lead_scoring.py  test_md_energy_compat.py  test_output_paths.py  test_patient_aggregation.py  test_report_log_parser.py  test_variant_analysis.py  test_xena_adapter.py
(+93 files in other folders)
