[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "t2lead"
version = "0.1.0"
description = "T2Lead: End-to-end drug discovery pipeline (Target → Hit → Lead)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "requests",
    "pyyaml",
    "python-dotenv",
    "joblib",
]

[project.optional-dependencies]
dl = ["torch"]
h2l = ["crem"]
docking = ["vina", "meeko"]
md = ["openmm", "pdbfixer", "mdtraj"]
lead_opt = ["vina", "meeko", "openmm", "pdbfixer", "mdtraj"]
all = ["torch", "crem", "vina", "meeko"]

[project.scripts]
t2lead = "drugpipe.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
